New manuscript version

--- a/manuscript/manuscript.Rmd
+++ b/manuscript/manuscript.Rmd
@@ -7,7 +7,7 @@ author:
 - name: Gonzalo Garcia-Castro
   affiliation: '1'
   corresponding: yes
-  address: Ramon Trial Fargas, 25-27, 08005 Barcelona
+  address: Ramon Trias Fargas, 25-27, 08005 Barcelona
   email: gonzalo.garciadecastro@upf.edu
 - name: Serene Siow
   affiliation: '2'
@@ -105,8 +105,11 @@ theme_set(
 
 Listening to non-native speech is more costly than listening to native speech, even for highly proficient bilinguals, and especially in acoustically adverse situations [@lecumberri2010non; @takata1990english]. One of the sources of this increased difficulty stems from the possible mismatch between the phonology of the native and the non-native languages: some acoustic features embedded in the non-native speech signal do not overlap perfectly with any phonemic category in the listener's native language. For example, a Spanish native listening to French may encounter the word /pɔʁt/ (*porte*), translation of *door* in French. The voiced uvular fricative consonant /ʁ/ and the open-mid back rounded vowel /ɔ/ do not exist in Spanish. These discrepancies can nonetheless be perceived as allophonic variations of native phonemes [@best2001discrimination], and the non-native speech signal engages lexical processing mechanisms [@weber2004lexical]. Although this mismatch has a noticeable toll on comprehension [@cutler2004patterns], the fact that word recognition can take place in such circumstances illustrates that non-native listeners--even low-proficiency ones--are rarely completely naïve to the language they are listening to. In the present study we investigate the extent to which adult listeners rely on the phonological similarity between the native and the non-native languages during word recognition, capitalising on the role of *cognates*.
 
+[//]: # (NSG: I think that a nice way to start the paper (or to finish it) is by citing one of those web pages that say that native English speakers already know tons of words in Spanish, French, German... because they are very similar (aka cognates). But this may work for writing, because for speech the situation is very different. This may be at the beginning or at the end of the paper. Given that most reviewers/ editors are likely to be native English-speakers, this may convince them that the paper is interesting and that they want to see it published.)
 
-All languages share, to some extent, similarities at the lexical level, frequently due to their typological closeness and/or socio-historical events involving the populations of speakers of each language. Cognates embody a particular case of such commonalities. Cognates are defined as cross-language synonyms whose form is similar (at the phonological level, orthographic level, signed level, etc.), frequently due to their shared etymological origin^[Some form-similar cross-language synonyms are technically not cognates. For example, *sun* and *sol* (in Spanish), share their phonological onset, but their etymology points to different origins. We will use the word *cognateness* to include all form-similar cross-language synonyms for simplicity. It is highly implausible that etymology plays a direct role on language perception if it is not via form-similarity, since it is not necessary for participants in psycholinguistic experiments to be aware of the etymology of the words they encounter in the tasks to be subject to the effect of form-similarity.]. For example, Romance languages such as Spanish and Catalan share many cognates [@schepens2012distributions], as in the case of *puerta* and *porta* (*door* in Spanish and Catalan, respectively). Cognates play a pivotal role in virtually all models of bilingual lexical processing because they provide evidence that bilinguals access the lexicon in a language non-selective way. For instance, pictures are named faster by Spanish-Catalan bilinguals when their associated labels in both languages are cognates (e.g., *puerta*-*porta*), compared to when their labels are non-cognates (*mesa*-*taula*, *table* in Spanish and Catalan), which suggests that word representations of both languages are activated during word retrieval [@costa2000cognate]. This cognate advantage is not restricted to production, but rather extends to word recognition [@thierry2007brain; @midgley2011effects], word learning [@de2000hard; @lotto1998effects; @valente2018does], and word translation [@christoffels2006memory].
+
+
+All languages share, to some extent, similarities at the lexical level, frequently due to their typological closeness and/or socio-historical events involving the populations of speakers of each language. Cognates embody a particular case of such commonalities. Cognates are defined as cross-language synonyms whose form is similar (at the phonological level, orthographic level, signed level, etc.), frequently due to their shared etymological origin^[Some form-similar cross-language synonyms are technically not cognates. For example, *sun* and *sol* (in Spanish), share their phonological onset, but their etymology points to different origins. We will use the word *cognateness* to include all form-similar cross-language synonyms for simplicity. It is highly implausible that etymology plays a direct role on language perception if it is not via form-similarity, since it is not necessary for participants in psycholinguistic experiments to be aware of the etymology of the words they encounter in the tasks to be subject to the effect of form-similarity.]. For example, Romance languages such as Spanish and Catalan share many cognates [@schepens2012distributions], as in the case of *puerta* and *porta* (*door* in Spanish and Catalan, respectively). Cognates play a pivotal role in virtually all models of bilingual lexical processing because they provide evidence that bilinguals access the lexicon in a language non-selective way. For instance, pictures are named faster by Spanish-Catalan bilinguals when their associated labels in both languages are cognates (e.g., *puerta*-*porta*), compared to when their labels are non-cognates (*mesa*-*taula*, *table* in Spanish and Catalan), which suggests that word representations of both languages are activated during word retrieval [@costa2000cognate]. This cognate advantage is not restricted to production, but rather extends to word recognition [@thierry2007brain; @midgley2011effects], word learning [@de2000hard; @lotto1998effects; @valente2018does; @elias2022cross], and word translation [@christoffels2006memory].
 
 
 
@@ -116,24 +119,34 @@ Early theoretical accounts of this phenomenon pointed to the fact that the impac
 To test these predictions, @degroot1994forward and @de1992determinants asked Dutch natives with high (but non-native) English proficiency to translate words from either Dutch to English (forward translation, L1 to L2) or from English to Dutch (backward translation, L2 to L1). Participants were presented with written words in English or Dutch, and were asked to speak out loud their translation in the other language as fast as possible. Results showed that translation times and accuracy were roughly equivalent in forward and backward translation. Cognates were translated equally fast in both conditions, but non-cognates were translated faster during backward than forward translation, and translation of cognates was less affected  by semantic variables than non-cognates. Moreover, forward translation was more sensitive than backward translation to the effect of semantic variables (e.g., concreteness). Overall, these findings supported a soft version of the RHM model, in which both the conceptual and the lexical translation routes are active during translation, but where backward translation relies more strongly on direct links between L1 and L2 representations, making it more sensitive to cognateness (than forward translation). Although higher-proficiency bilinguals tested in the same task showed similar results, subsequent studies did not find differences in participant's performance during forward and backward translation, or even found better performances in forward translation [@christoffels2006memory; @christoffels2013language]. These later findings put into question the RHM's predictions regarding the relationship between proficiency and cognateness, and backed a more complex interaction between the L1 and L2 lexica during word recognition.
 
 
-Since the RHM model was proposed, later studies on monolingual populations brought attention to the role of the network of connections that words establish with each other at the form-level (phonological or orthographic) or at the conceptual level. For instance, the Neighbourhood Activation Model [NAM, @luce1998recognizing] highlighted the fact that lexical selection is affected by the number of phonological neighbours of the selected word. Words surrounded by a larger number of phonological neighbours (only differing in one phoneme from the target words) are responded more slowly and less accurately than words from sparser phonological neighbourhoods [@goldinger1989priming; @luce1990similarity], especially when such neighbours' lexical frequency is higher [@luce1998recognizing]. This finding posed an important question in the field of bilingualism research: do word representations in one language form part of the phonological or orthographic neighbours of the other language? The Bilingual Interactive Activation [BIA+, @van1998orthographic] addressed this issue and suggested that lexical representations from both languages establish both excitatory and inhibitory connections with other, resulting in an integrated lexicon for both languages, in line with connectionist approaches to lexical processing [@mcclelland1981interactive]. Evidence supporting such integrated lexicon is provided by the fact that bilinguals' performance in word recognition tasks is sensitive to the orthographic neighbourhood density of the translation of the presented word. When bilingual participants are presented with words in only one language (target language) in a lexical decision task, translating them to the non-target language took longer when they were part of large  neighbourhoods [@van1998orthographic]. This suggests that words presented in the target language activated orthographic neighbourhoods in the non-target language, which competed for selection with the target word during recognition.
+Since the RHM model was proposed, later studies on monolingual populations brought attention to the role of the network of connections that words establish with each other at the form-level (phonological or orthographic) or at the conceptual level. For instance, the Neighbourhood Activation Model [NAM, @luce1998recognizing] highlighted the fact that lexical selection is affected by the number of phonological neighbours of the selected word. Words surrounded by a larger number of phonological neighbours (only differing in one phoneme from the target words) are responded more slowly and less accurately than words from sparser phonological neighbourhoods [@goldinger1989priming; @luce1990similarity], especially when such neighbours' lexical frequency is higher [@luce1998recognizing]. This finding posed an important question in the field of bilingualism research: do word representations in one language form part of the phonological or orthographic neighbours of the other language? The Bilingual Interactive Activation (BIA/BIA+)  [@van1998orthographic; @dijkstra2002architecture] addressed this issue and suggested that lexical representations from both languages establish both excitatory and inhibitory connections with other, resulting in an integrated lexicon for both languages, in line with connectionist approaches to lexical processing [@mcclelland1981interactive]. Evidence supporting such integrated lexicon is provided by the fact that bilinguals' performance in word recognition tasks is sensitive to the orthographic neighbourhood density of the translation of the presented word. When bilingual participants are presented with words in only one language (target language) in a lexical decision task, translating them to the non-target language took longer when they were part of large  neighbourhoods [@van1998orthographic]. This suggests that words presented in the target language activated orthographic neighbourhoods in the non-target language, which competed for selection with the target word during recognition.
 
 
 
-A more recent model of bilingual lexical processing is Multilink [@dijkstra2019multilink], which integrates and formalises previous claims and predictions on how an interactive account of bilingual lexical access impacts word recognition, production, and translation. This model assumes an integrated lexicon in which word representations from the two languages establish connections in a way that is similar to what words of a single language do. Such model also assumes that during backward translation, the presented word in L2 activates form-similar words in L1, which in turn compete with the target word in L1. It also  proposes that translation equivalents are exclusively connected through their shared concept, contrary to the RHM model's specifications (which suggest that translation equivalents are connected by excitatory connections at the lexical level; e.g., translation can be done via word-word connections). In addition, this model suggests that the strength of the association between L2 representations and their concept is a function of language users' proficiency in L2. A remarkable correlation between Multilink simulations of a translation elicitation task and behavioural data on Dutch-English bilinguals [@christoffels2006memory] has been reported, showing that forward translation is faster than backward translation, contrary to the predictions made by the RHM model. Importantly, the model also generates data supporting the claim that cognates are translated faster than non-cognates, in line with previous literature on the cognate advantage during translation. Overall, results from Multilink are compatible with an integrated bilingual lexicon and with the existence of a facilitatory effect of cross-language similarity during translation.  
+A more recent model of bilingual lexical processing is Multilink [@dijkstra2019multilink], which integrates and formalises previous claims and predictions on how an interactive account of bilingual lexical access impacts word recognition, production, and translation. This model assumes an integrated lexicon in which word representations from the two languages establish connections in a way that is similar to what words of a single language do. It also makes the assumption that during backward translation, the presented word in L2 activates form-similar words in L1, which in turn compete with the target word in L1. It also  proposes that translation equivalents are exclusively connected through their shared concept, contrary to the RHM model's specifications (which suggest that translation equivalents are connected by excitatory connections at the lexical level; e.g., translation can be done via word-word connections). In addition, this model suggests that the strength of the association between L2 representations and their concept is a function of language users' proficiency in L2. A remarkable correlation between Multilink simulations of a translation elicitation task and behavioural data on Dutch-English bilinguals [@christoffels2006memory] has been reported, showing that forward translation is faster than backward translation, contrary to the predictions made by the RHM model. Importantly, the model also generates data supporting the claim that cognates are translated faster than non-cognates, in line with previous literature on the cognate advantage during translation. Overall, results from Multilink are compatible with an integrated bilingual lexicon and with the existence of a facilitatory effect of cross-language similarity during translation.  
 
 
-The fact that Multilink successfully fitted the experimental data from @christoffels2006memory, despite the absence of any word-word connections between translation equivalents, is remarkable, and questions the necessity of such connections during translation, in favour of simpler models in which backward translation relies exclusively on the association between L2 and L1 word forms via their shared concept. It should be taken into account, however, that  @christoffels2006memory only tested fairly balanced bilinguals (i.e., bilinguals with high proficiency in L2), and that the model specification under which the quantitative predictions were generated, assumes similar vocabulary sizes across languages and same strength of word-concept connections of L1 and L2 representations. The aforementioned conclusions should therefore be taken with caution when extended to unbalanced bilinguals. It is low-proficiency bilinguals for whom the RHM model predicts strong reliance on word-word connections during translation, especially during backward translation, and this prediction remains untested my Multilink.
+The fact that Multilink successfully fitted the experimental data from @christoffels2006memory, despite the absence of any word-word connections between translation equivalents, is remarkable, and questions the necessity of such connections during translation, in favour of simpler models in which backward translation relies exclusively on the association between L2 and L1 word forms via their shared concept. It should be taken into account, however, that  @christoffels2006memory only tested fairly balanced bilinguals (i.e., bilinguals with high proficiency in L2), and that the model specification under which the quantitative predictions were generated assumes similar vocabulary sizes across languages and same strength of word-concept connections of L1 and L2 representations. The aforementioned conclusions should therefore be taken with caution when extended to unbalanced bilinguals. It is low-proficiency bilinguals for whom the RHM model predicts strong reliance on word-word connections during translation, especially during backward translation, and this prediction remains untested my Multilink.
 
 
-In the present study we investigated the plausibility of the lexical route as a mechanism exploited by monolingual adults during backward translation. Monolinguals can be considered a particular (extreme) case of unbalanced bilingualism, in which their vocabulary size in L2 is null, and word-concept connections are absent. In this case, monolinguals can only use the lexical route to succeed in the translation task, and they can only do so by exploiting the cognateness of the words presented and their translation in the native language. We hypothesised that if participants are able to translate words in L2, without knowledge of the language it belongs to, and based on their form-similarity with the target word, then the lexical route should be in place for low-proficiency bilinguals. In contrast, if participants are not able to translate words from L2 to L1 regardless of their form-similarity, then should low-proficiency bilinguals rely entirely on word-concept connections for backward translation.
+Most of the studies referenced so far rely heavily on production and comprehension of printed words: in these studies, stimuli are presented in a screen, and participants must read them in order to complete the experimental task at hand. This is a limitation regarding the generalisation of their findings to the auditory modality, especially when cognateness (or more generally any measure of similarity between word-forms) is involved. Consider the words *radio* (English) and *radio* (Catalan). Both words are evidently cognates, as their orthographical word form is identical. However, their phonological forms (/ˈɹeɪdiˌəʊ/-/ˈraðjo/) are not identical. Although many English listeners might understand the Spanish word-form, even with no previous knowledge of 
+Spanish, it is likely that they will find the translation process more challenging when presented with the auditory word-forms than when presented with the visual word-forms. For the same reason, measuring the phonological similarity between two word forms is substantially more challenging than measuring their orthographic similarity.
 
-Following @luce1998recognizing we also hypothesised that if participants are able to correctly translate words from an unfamiliar language based on their phonological similarity to the target word, similar sounding but incorrect translations (e.g., false friends) should be activated too. If this is the case, words whose translation in the native language are part of larger phonological neighbours should be less likely to be correctly translated, especially if such neighbours have higher lexical frequency than the target word.
+Most studies use symbolic representations of the word-forms of interest for compute their similarity in either modality: character strings in the case of orthographic word-forms (*radio*-*radio*), and phonological transcriptions (ɹeɪdiəʊ-raðjo, in IPA notation) in the case of phonological word forms, which also consists on a string of characters [see @floccia2018introduction for example]. Either way, the similarity between the pair of word-forms is frequently measured by applying some algorithm that computes the edit distance between both. The Leveshtein distance is one of the most widely known: it computes the number of insertions, deletions or substitutions of the of the strings must go through in order to become identical to the other string [@levenshtein1966binary], and has been successfully used to estimate the similarity of cross-language word-pairs [@gooskens2004perceptive; @schepens2012distributions]. The Levenshtein distance between the orthographic word-forms *radio* (English) and *radio* (Spanish) is `r stringdist::stringdist("radio", "radio")`: both strings are identical. But the distance between the phonological transcriptions ɹeɪdiəʊ and raðjo is `r stringdist::stringdist("ɹeɪdiəʊ", "raðjo")`, which is the number of editions that separates both character strings. There is yet an additional layer of complexity: the phonological transcriptions /ˈɹeɪdiˌəʊ/ and /ˈraðjo/ are symbolic representations that do not capture the all of the features that are present in the acoustic signal when either word is spoken, and therefore any measure of similarity that uses such transcriptions as input will overestimate their actual similarity. Taking into account that measuring phonological similarity is considerably more complex than measuyring orthographic complexitym it is no surprise that most literature on word recognition (or even on psycholinguistics) has been devoted to study orthography instead of phonology. In summary, it is very likely that previous investigations on bilinguals' reliance on form-similarity during translation might be overestimating the availability of such information in the auditory modality.
+
+
+In the present study we test listener's reliance on phonological similarity when translating words from a non-native language, in order to investigate the plausibility of the lexical route during backward translation. We tested monolingual adults in a translation elicitation task: they were presented with spoken words in a non-native language, and later asked to translate them to their native language. The choice of monolinguals as out population of interest is motivated by the fact that monolinguals can be considered a particular (extreme) case of unbalanced bilingualism, in which their vocabulary size in L2 is null, and therefore word-concept connections are, in principle, absent. As a consequence, monolinguals should only be able use the lexical route to succeed in the translation task, which they can only do by exploiting the cognateness of the words presented and their translation in the native language. We hypothesised that if participants are able to translate words in L2, without knowledge of the language it belongs to, and based on their form-similarity with the target word, then the lexical route should be in place for low-proficiency bilinguals. In contrast, if participants are not able to translate words from L2 to L1 regardless of their form-similarity, then low-proficiency bilinguals should rely entirely on word-concept connections for backward translation.
+
+We tested three groups of participants in the translation elicitation task: English natives translating Spanish words, English natives translating Catalan words, and Spanish natives translating Catalan words. Catalan and Spanish are both Roman languages whose close typological distance is reflected in the fact that they share many cognates, whereas English is a Germanic language that shares considerably fewer cognates with Catalan and Spanish. By testing participants translating words from a typologically close and distant languages, we expected to widen the range of the phonological similarity scores of the translation pairs involved in the experimental task, therefore allowing us to explore potential cross-language differences in participant's performance.
+
+
+Following @luce1998recognizing we further hypothesised that if participants are able to correctly translate words from an unfamiliar language based on their phonological similarity to the target word, similar sounding but incorrect translations (e.g., false friends) should be activated too. If this is the case, words whose translation in the native language are part of larger phonological neighbours should be less likely to be correctly translated, especially if such neighbours have higher lexical frequency than the target word. For instance, one could expect English participants to incorrectly translate the Spanish word *botón* as *bottom* instead of as its correct translation *button* (whose lexical frequency is higher). If the phonological neighbourhood density of the target words affects participants' performance negatively, this would suggest that non-native words trigger competition between words in the native language during translation.
+
 
 
 # Methods
 
-All materials, data, and code used in this study are hosted in the Open Science Framework [https://osf.io/9fjxm/](https://osf.io/9fjxm/) and a GitHub repository [https://github.com/bilingual-project/translation-elicitation.git](https://github.com/bilingual-project/translation-elicitation.git), along with additional notes.
+All materials, data, and code used in this study are hosted in the Open Science Framework [https://osf.io/9fjxm/](https://osf.io/9fjxm/) and a GitHub repository [https://github.com/gongcastro/translation-elicitation.git](https://github.com/gongcastro/translation-elicitation.git), along with additional notes.
 
 
 ## Participants
@@ -171,9 +184,20 @@ lengths <- stimuli %>%
 We arranged two lists of words: one in Catalan (to be presented to English and Spanish natives) and one in Spanish (to be presented to English natives only). Words in the Catalan list (listened to by participants) were `r printnum(lengths$eng_cat["ipa1_mean"])` phonemes long on average (*SD* = `r printnum(lengths$eng_cat["ipa1_sd"])`, Range = `r printnum(lengths$eng_cat["ipa1_min"], digits = 0)`-`r printnum(lengths$eng_cat["ipa1_max"], digits = 0)`). Their translations to English (typed by participants in the keyboard) were `r printnum(lengths$eng_cat["word2_mean"])` characters long on average (*SD* = `r printnum(lengths$eng_cat["word2_sd"])`, Range = `r printnum(lengths$eng_cat["word2_min"], digits = 0)`-`r printnum(lengths$eng_cat["word2_max"], digits = 0)`), and their translations to Spanish were `r printnum(lengths$spa_cat["word2_mean"])` characters long on average (*SD* = `r printnum(lengths$spa_cat["word2_sd"])`, Range = `r printnum(lengths$eng_cat["word2_min"], digits = 0)`-`r printnum(lengths$eng_cat["word2_max"], digits = 0)`). Words in the Spanish list were `r printnum(lengths$eng_spa["ipa1_mean"])` phonemes long on average (*SD* = `r printnum(lengths$eng_spa["ipa1_sd"])`, Range = `r printnum(lengths$eng_spa["ipa1_min"], digits = 0)`-`r printnum(lengths$eng_spa["ipa1_max"], digits = 0)`). Their translations to English were `r printnum(lengths$eng_spa["word2_mean"])` characters long on average (*SD* = `r printnum(lengths$eng_spa["word2_sd"])`, Range = `r printnum(lengths$eng_spa["word2_min"], digits = 0)`-`r printnum(lengths$eng_spa["word2_max"], digits = 0)`). 
 
 
-We extracted the lexical frequencies from SUBTLEX-UK for English words [@van2014subtlex], SUBTLEX-ESP for Spanish words [@cuetos2011subtlex], and SUBTLEX-CAT for Catalan words [@boada2020subtlex]. We extracted or transformed scores as/into Zipf scores [@van2014subtlex] to so correct their logarithmic distribution, limiting their range roughly between 0 to 7, allowing an easier interpretation of further analyses [@van2014subtlex]. 
+We extracted the lexical frequencies from SUBTLEX-UK for English words [@van2014subtlex], SUBTLEX-ESP for Spanish words [@cuetos2011subtlex], and SUBTLEX-CAT for Catalan words [@boada2020subtlex]. We extracted or transformed scores as/into Zipf scores [@van2014subtlex] to  correct their logarithmic distribution, limiting their range roughly between 0 to 7, allowing an easier interpretation of further analyses [@van2014subtlex]. 
 
-We retrieved PTHN scores (Phonological Total Higher-frequency Neighbourhood size) from the CLEARPOND database [@marian2012clearpond]. PTHN scores indicate the number of phonological neighbours of the target word with higher lexical frequency, as indicated by its score in the corresponding SUBTLEX database. CLEARPOND defines a phonological neighbour as a word whose phonological transcription in International Phonetic Alphabet (IPA) format (generated from eSPEAK, [http://espeak.sourceforge.net/](http://espeak.sourceforge.net/)) differs from that of the target word in only one addition, deletion, or substitution. PTHN scores in CLEARPOND measure have been calculated using corpora of similar size across language, allowing reliable cross-language comparisons. 
+```{r pthn_example, echo=FALSE, message=FALSE, warning=FALSE, paged.print=FALSE}
+
+pthn_example <- clearpond_path %>% 
+  map(read.csv) %>% 
+  bind_rows(.id = "group") %>% 
+  clean_names() %>% 
+  filter(word %in% c("book", "sock"), group=="ENG-CAT") %>% 
+  select(word, pthn) 
+
+```
+
+We retrieved PTHN scores (Phonological Total Higher-frequency Neighbourhood size) from the CLEARPOND database [@marian2012clearpond]. PTHN scores indicate the number of phonological neighbours of the target word (the correct translation in the native language of the presented word) with higher lexical frequency, as indicated by its score in the corresponding SUBTLEX database. CLEARPOND defines a phonological neighbour as a word whose phonological transcription in International Phonetic Alphabet (IPA) format (generated from eSPEAK, [http://espeak.sourceforge.net/](http://espeak.sourceforge.net/)) differs from that of the target word in only one addition, deletion, or substitution. For instance, the PTHN score of *book* is `r pthn_example$pthn[1]`, while that of *sock* is `r pthn_example$pthn[2]`. PTHN scores in CLEARPOND measure have been calculated using corpora of similar size across language, allowing reliable cross-language comparisons. 
 
 
 ```{r stimuliplot, echo=FALSE, message=FALSE, warning=FALSE, paged.print=FALSE, out.width="100%", fig.width=7, fig.cap="Distribution and summary statistics of stimuli properties. A\\) Lexical frequency of target words, expressed in counts per million and as Zipf scores. B\\) Number of higher-frequency phonological neighbourhoods of target words (PTHN). C\\) Normalised Levenshtein phonological similarity between the presented and the target words, expressed in percentages."}
@@ -250,7 +274,7 @@ stimuli %>%
   theme(legend.position = "none")
 ```
 
-We measured the phonological similarity between translation pairs by computing the Levenshtein similarity between their IPA translations using the `stringsim` function of the stringdist R package [@van2014stringdist]. This function computes the inverse of the Levenshtein distance between two character strings as a proportion. First, it computes the edit distance between two character strings (in this case, phoneme symbols) by counting the number of additions, deletions, and substitutions necessary to make both strings identical [@levenshtein1966binary]. This measure is then divided by the maximum distance (according to the length of the longest string) and then subtracted from 1. The result is percentage score indicating no similarity between the two strings if 0%, and a perfect match between two strings if 100%. We computed this similarity measure (Levenshtein, from now on) for every translation pair in our stimuli lists. Figure 1 summarises the lexical frequency, phonological neighbourhood density and phonological overlap of the words included in the Catalan and the Spanish lists.
+We measured the phonological similarity between translation pairs by computing the Levenshtein similarity between their IPA translations using the `stringsim` function of the stringdist R package [@van2014stringdist]. This function computes the inverse of the Levenshtein distance between two character strings as a proportion. First, it computes the edit distance between two character strings (in this case, phoneme symbols) by counting the number of additions, deletions, and substitutions necessary to make both strings identical [@levenshtein1966binary]. This measure is then divided by the maximum distance (according to the length of the longest string) and then subtracted from 1. The result is percentage score indicating no similarity between the two strings if 0%, and a perfect match between two strings if 100%. We computed this similarity measure (Levenshtein, from now on) for every translation pair in our stimuli lists. For example, the *table* (teɪbəl)-*mesa* (mesa) translation pair had a `r percent(stringsim("teɪbəl", "mesa"))` similarity, while the *train* (trEIn)-*guitarra* (tɾEn) translation pair had a `r percent(stringsim("trEIn", "tɾEn"))` similarity. Figure 1 summarises the lexical frequency, phonological neighbourhood density and phonological overlap of the words included in the Catalan and the Spanish lists.
 
 
 
