--- a/manuscript/references.bib
+++ b/manuscript/references.bib
@@ -418,6 +418,26 @@
   publisher={Soc Neuroscience}
 }
 
+@article{floccia2018introduction,
+  title={I: INTRODUCTION},
+  author={Floccia, Caroline and Sambrook, Thomas D and Delle Luche, Claire and Kwok, Rosa and Goslin, Jeremy and White, Laurence and Cattani, Allegra and Sullivan, Emily and Abbot-Smith, Kirsten and Krott, Andrea and others},
+  journal={Monographs of the Society for Research in Child Development},
+  volume={83},
+  number={1},
+  pages={7--29},
+  year={2018},
+  publisher={Wiley Online Library}
+}
+
+@article{elias2022cross,
+  title={Cross-language interactions during novel word learning: The contribution of form similarity and participant characteristics},
+  author={Elias, Mariana and Degani, Tamar},
+  journal={Bilingualism: Language and Cognition},
+  pages={1--18},
+  year={2022},
+  publisher={Cambridge University Press}
+}
+
 @article{hirosh2021novel,
   title={Novel Word Learning Among Bilinguals Can Be Better Through the (Dominant) First Language Than Through the Second Language},
   author={Hirosh, Zoya and Degani, Tamar},
